@@ -18,10 +18,7 @@ class CdCommandTest {
         Command cd = new CdCommand(dir,parts);
         dir= cd.execute();
         PwdCommand pwd = new PwdCommand(dir);
-
-        Assert.assertEquals("C:\\Users\\DELL\\Saved Games", pwd.getOutput());
-
-        Assert.assertEquals("C:\\Users\\DELL\\Saved Games", pwd.getOutput().get(0).trim());
+        Assert.assertEquals("C:\\Users\\DELL\\Saved Games", pwd.getOutput().getFirst().trim());
 
     }
 }
